Hotfixes for team slider on tablet and desktop

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "Austurhofn",
+  "name": "Void",
   "version": "1.0.0",
-  "description": "Custom WP theme for Austurhofn project",
+  "description": "Custom WP theme for Void project",
   "repository": {
     "type": "git",
     "url": ""
